# raindrop-mcp

./: .gitignore  README.md  model.py  pyproject.toml  raindrop.py  server.py  type.py
src/raindrop_mcp/: __init__.py  model.py  raindrop.py
