[project]
name = "raindrop-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.5",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
raindrop-mcp = "raindrop_mcp:main"
